# KaliRootCLI

./: .gitignore  DEPLOYMENT_COMPLETE.md  INSTALL.md  PAYMENT_VERIFICATION.md  README.md  RENDER_DEPLOYMENT.md  TESTING_GUIDE.md  add_credits_column.sql  add_geolocation_columns.sql  api_server.py  chat_hola_mundo_20251221_1816.md  create_terms_table.sql  daily_credits_migration.sql  education_routes.py  install.py  install.sh  pyproject.toml  render.yaml  requirements-server.txt  requirements.txt  session_tracking_migration.sql  setup_kr_cli.py  start_server.sh  supabase_migrations_v2.sql  supabase_security_migrations.sql  test_api_endpoints.py  test_credit_calls.py  test_payments.py  test_rag.py  web_admin_migrations.sql  webhook_server.py
docs/: ARCHITECTURE.md
kalirootcli/: __init__.py  agent.py  ai_handler.py  api_client.py  auth.py  database_manager.py  distro_detector.py  main.py  subscription.py  system_collector.py
kalirootcli/tools/: cve_cache.json
kalirootcli/ui/: display.py  menus.py  splash.py
