[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalirootcli"
version = "1.0.0"
description = "Advanced Cybersecurity CLI Assistant for Termux & Kali Linux"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "KaliRootCode", email = "kalirootcode@proton.me"}
]
keywords = ["cybersecurity", "hacking", "pentesting", "kali", "termux", "cli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Android",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "supabase>=2.0.0",
    "groq>=0.4.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "bcrypt>=4.1.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kalirootcode/KaliRootCLI"
Repository = "https://github.com/kalirootcode/KaliRootCLI"
Issues = "https://github.com/kalirootcode/KaliRootCLI/issues"

[project.scripts]
kalirootcli = "kalirootcli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kalirootcli*"]
